# Aby55

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  partitions.csv  sdkconfig.defaults
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: spec.yml
components/esp_lcd_st7121/: CMakeLists.txt
components/m5stack_tab5/src/: bsp_display.c  bsp_io_expander.c
components/tab5_bsp_adapter/: CMakeLists.txt  idf_component.yml  tab5_bsp_adapter.cpp
components/tab5_bsp_adapter/include/: tab5_bsp_adapter.hpp
docs/: ABY55_FLASHING.md  BASS_GENERATOR_AND_MOTION.md  HARDWARE_TEST.md  TAB5_CURRENT_SUCCESS_BASELINE.md  TAB5_OFFICIAL_DISPLAY_PARAMS.md
docs/releases/: v0.2.0-dev.md
main/: CMakeLists.txt  app_main.cpp  audio_engine.cpp  idf_component.yml  patterns.cpp  patterns.json  transport.cpp  ui_controller.cpp
main/include/: audio_engine.hpp  patterns.hpp  transport.hpp  ui_controller.hpp
tests/: test_project_spec.py
tools/: flash_aby55_tab5.cmd  flash_aby55_tab5.ps1
